git subrepo clone --force git://github.com/perl6/doc.git perl6/doc
subrepo:
  subdir:   "perl6/doc"
  merged:   "8722759"
upstream:
  origin:   "git://github.com/perl6/doc.git"
  branch:   "master"
  commit:   "8722759"
git-subrepo:
  version:  "0.2.0"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "5c38bbc"

--- a/perl6/doc/template/header.html
+++ b/perl6/doc/template/header.html
@@ -6,7 +6,9 @@
     <div id="search" class="ui-widget">
         <div class="green"><input placeholder="Search" id="query" title="Enter Perl 6 document to search for"></div>
     </div>
-    MENU
+    <div class="menu">
+      MENU
+    </div>
 </div>
 <div id="content-wrapper">
 <div id="content" class="pretty-box yellow">
