git subrepo clone --force git://github.com/perl6/doc.git perl6/doc
subrepo:
  subdir:   "perl6/doc"
  merged:   "6f6938b"
upstream:
  origin:   "git://github.com/perl6/doc.git"
  branch:   "master"
  commit:   "6f6938b"
git-subrepo:
  version:  "0.2.0"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "5c38bbc"

--- a/perl6/doc/template/head.html
+++ b/perl6/doc/template/head.html
@@ -1,6 +1,7 @@
 <link rel="icon" href="/favicon.ico" type="image/x-icon" />
 <link rel="stylesheet" type="text/css" href="/css/style.css" media="screen" title="default" />
 <link type="text/css" href="/css/custom-theme/jquery-ui-1.8.21.custom.css" rel="stylesheet" />
+<link type="text/css" href="/css/pygments.css" rel="stylesheet" />
 <script type="text/javascript" src="/js/jquery-1.7.2.min.js"></script>
 <script type="text/javascript" src="/js/jquery-ui-1.8.21.custom.min.js"></script>
 <script type="text/javascript" src="/js/search.js"></script>
