git subrepo clone --force git://github.com/perl6/doc.git perl6/doc
subrepo:
  subdir:   "perl6/doc"
  merged:   "9e567b0"
upstream:
  origin:   "git://github.com/perl6/doc.git"
  branch:   "master"
  commit:   "9e567b0"
git-subrepo:
  version:  "0.2.2"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "436d7b7"

--- a/perl6/doc/html/css/style.css
+++ b/perl6/doc/html/css/style.css
@@ -32,6 +32,8 @@ pre {
     padding: 0.6ex;
     color: black;
     overflow: auto;
+    white-space: pre-wrap;
+    word-break: break-all;
 }
 
 code {
