git subrepo clone --force git://github.com/perl6/doc.git perl6/doc
subrepo:
  subdir:   "perl6/doc"
  merged:   "7b9859e"
upstream:
  origin:   "git://github.com/perl6/doc.git"
  branch:   "master"
  commit:   "7b9859e"
git-subrepo:
  version:  "0.2.2"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "436d7b7"

--- a/perl6/doc/html/css/style.css
+++ b/perl6/doc/html/css/style.css
@@ -132,7 +132,11 @@ td p {
         margin: 0;
         text-align: center;
     }
+    #home_logo {
+        display: none;
+    }
 }
+
 
 #logo {
     display: inline-block;
