git subrepo clone --force git://github.com/perl6/doc.git perl6/doc
subrepo:
  subdir:   "perl6/doc"
  merged:   "47c01e8"
upstream:
  origin:   "git://github.com/perl6/doc.git"
  branch:   "master"
  commit:   "47c01e8"
git-subrepo:
  version:  "0.2.3"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "87a8275"

--- a/perl6/doc/template/header.html
+++ b/perl6/doc/template/header.html
@@ -4,7 +4,7 @@
         >&nbsp;Perl 6 Documentation</a
     >
     <div id="search" class="ui-widget">
-        <div class="green"><input placeholder="Loading..." autofocus id="query" title="Enter Perl 6 document to search for"></div>
+        <div class="green"><input placeholder="Loading..." id="query" title="Enter Perl 6 document to search for"></div>
     </div>
     <div class="menu">
       MENU
