git subrepo clone --force git://github.com/perl6/doc.git perl6/doc
subrepo:
  subdir:   "perl6/doc"
  merged:   "3b5bd22"
upstream:
  origin:   "git://github.com/perl6/doc.git"
  branch:   "master"
  commit:   "3b5bd22"
git-subrepo:
  version:  "0.2.3"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "87a8275"

--- a/perl6/doc/html/css/style.css
+++ b/perl6/doc/html/css/style.css
@@ -202,9 +202,16 @@ td p {
 .ui-autocomplete-category {
     font-weight: bold;
     font-style: italic;
-    background-color: #DAFE8C;
+    background-color: #8BC313;
     padding: 2px 5px;
     line-height: 1.5;
+}
+.ui-state-focus {
+    font-weight: normal !important; /* override css/custom-theme/jquery-ui.css */
+    font-style: italic;
+}
+.ui-menu .ui-menu-item {
+    padding-left: 1em !important; /* override css/custom-theme/jquery-ui.css */
 }
 
 .menu {
