git subrepo clone --force git://github.com/perl6/doc.git perl6/doc
subrepo:
  subdir:   "perl6/doc"
  merged:   "c7b5052"
upstream:
  origin:   "git://github.com/perl6/doc.git"
  branch:   "master"
  commit:   "c7b5052"
git-subrepo:
  version:  "0.4.0"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "b645cc9"

--- a/perl6/doc/assets/sass/_highlights.scss
+++ b/perl6/doc/assets/sass/_highlights.scss
@@ -72,7 +72,9 @@
   color: #900;
 }
 /* Regex/Grammars */
-
+.string.regexp.construct {
+  color: #0078FF;
+}
 /* `token`, `regex` */
 .storage.type.declare.regexp.named {
   color: #393276;
