--- a/szabgab/Perl6-Maven/templates/include/footer.tmpl
+++ b/szabgab/Perl6-Maven/templates/include/footer.tmpl
@@ -11,7 +11,7 @@
 
        <h3>Perl 6 Tricks and Treats newsletter</h3>
        Register to the free newsletter now, and get updates and news.
-       <form method=POST action="http://mail.szabgab.com/mailman/subscribe/perl6">
+       <form method=POST action="https://mail.szabgab.com/mailman/subscribe/perl6">
        Email: <input type="text" name="email" size="30" value=""><br />
        Name:  <input type="text" name="fullname" size="30" value=""><br />
        <INPUT type="Submit" name="email-button" value="Subscribe">
