--- a/szabgab/Perl6-Maven/templates/include/newsletter.tmpl
+++ b/szabgab/Perl6-Maven/templates/include/newsletter.tmpl
@@ -4,7 +4,7 @@
 The <b>Perl 6 Tricks and Treats</b> newsletter has been around for a while.
 If you are interested to get special notification when there is new content
 on this site, it is the best way to keep track:
-<form method=POST action="http://mail.szabgab.com/mailman/subscribe/perl6">
+<form method=POST action="https://mail.szabgab.com/mailman/subscribe/perl6">
 <table>
 <tr><td>Email:</td><td><input type="text" name="email" size="30" value=""></td></tr>
 <tr><td>Full name:</td><td><input type="text" name="fullname" size="30" value=""></td></tr>
